--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -97,7 +97,7 @@ body {
   -webkit-box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.3);
 }
 
-#editBtn {
+.editBtn {
   float: right;
   background-color: rgb(113, 153, 238);
   color: white;
@@ -108,11 +108,11 @@ body {
   padding: 10px 20px;
 }
 
-#editBtn:hover {
+.editBtn:hover {
   background-color: rgb(146, 182, 255);
 }
 
-#deleteBtn {
+.deleteBtn {
   float: right;
   background: rgb(224, 37, 37);
   color: white;
@@ -123,7 +123,7 @@ body {
   padding: 10px 14px;
 }
 
-#deleteBtn:hover {
+.deleteBtn:hover {
   background-color: rgb(255, 91, 91);
 }
 
@@ -238,55 +238,27 @@ label {
   cursor: pointer;
 }
 
-#questionTable {
+.tableDisplay {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 85%;
 }
 
-#questionTable td,
-#questionTable th {
+.tableDisplay td,
+.tableDisplay th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#questionTable tr:nth-child(even) {
+.tableDisplay tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-#questionTable tr:hover {
+.tableDisplay tr:hover {
   background-color: #ddd;
 }
 
-#questionTable th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #4caf50;
-  color: white;
-}
-
-#questionTableCQ {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-#questionTableCQ td,
-#questionTableCQ th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-#questionTableCQ tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-#questionTableCQ tr:hover {
-  background-color: #ddd;
-}
-
-#questionTableCQ th {
+.tableDisplay th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
