--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -68,7 +68,7 @@ input[type="password"]:focus {
 }
 
 #showMessage {
-  background: #f4c20d;
+  background: #f35a46;
   min-width: 30%;
   border-radius: 4px;
   height: auto;
