--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -79,14 +79,14 @@ body {
 }
 
 #addQuestion textarea {
-  max-height: 400px;
+  max-height: 250px;
   resize: none;
 }
 
 #addedQuestions {
   margin: 10px;
   min-height: 300px;
-  height: auto;
+  height: 620px;
   width: 50%;
 }
 
@@ -143,11 +143,11 @@ label {
 #modalSaveBtn {
   background-color: #4caf50;
   color: white;
+  margin: 20px;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  float: right;
 }
 
 .row select {
@@ -309,6 +309,12 @@ label {
   width: auto;
   display: flex;
   float: right;
+}
+
+.testCase {
+  height: auto;
+  width: auto;
+  display: flex;
 }
 
 #examsTable {
